@@ -3,6 +3,7 @@ DNAshapeR 0.99.0
 
 FIRST STABLE RELEASE
 
-*  The y-axis plot range in plotShape can now be user-defined.
+*  normalization parameter in encodeSeqShape.R changed to normalize.
+*  The y-axis plot range in plotShape can now be defined by the user.
 *  Completed package documentation.
 *  DNA shape feature matrix returned by encodeSeqShape is now normalized by default.
